# Sport-car

./: .gitignore  Dockerfile  README.md  azureCI.yml  iv.yaml  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: codeql.yml  docker-image.yml  fortify.yml  testear.yml
docs/: CI_docs.md  docker.md  gestores.md  objetivo1.md  objetivo2.md  test.md  user_journey.md
sportcar/: actividad.py  constantes.py  errores.py  grupo.py  grupos.py  main.py  usuario.py
test/: __init__.py  test.py
