[tool.poetry]
name = "sport-car"
version = "0.1.0"
description = ""
authors = ["argelion14 <argelion14@gmail.com>"]
license = "GNU General Public License v2.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
