[tool.poetry]
name = "sport-car"
version = "0.1.0"
description = "Tu vehículo para el deporte"
authors = ["argelion14 <argelion14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
